Change List
=========
Version 1.0.36 (Build 2023062600)
- Added no audio noise filters setting, to prevent audio distortion when playing back audio at the same time as recording.

Version 1.0.35 (Build 2023051900)
- M42 support

Version 1.0.34 (Build 2023041500)
- added RTL support for Arabic/Hebrew/Farsi
- added corrections feature to standard transcript

Version 1.0.32 (Build 2022100700)
- removed unneeded lang strings

Version 1.0.31 (Build 2022060500)
- Changed AMD build steps
- Change free trial jump link

Version 1.0.30 (Build 2022030200)
- added version bump so that iOS will pull latest video recorder code

Version 1.0.29 (Build 2021122200)
- added an enable recorder type setting to the activity
- added fetch API creds links to settings page

Version 1.0.28 (Build 2021082700)
- fixed layout issue if video recorder and another submission type were both active

Version 1.0.27 (Build 2021062400)
-added export file feature
-added delete remote files feature (currently disabled)
-added secure playback urls (needs more work)
-added screen recorder

Version 1.0.26 (Build 2021052000)
-Added Bahrain and Capetown as regions

Version 1.0.25 (Build 2021042800)
- Made transcription:none, the default
- Hard coded transcoding, and removed the option to opt out of it. We always need it.

Version 1.0.24 (Build 2021032600)
-Unneeded "gggg" appended to name of the audio recorder field on the student view.

Version 1.0.23 (Build 2021022701)
- Tweak for responsiveness on some themes without width 100% set on form-control-static

Version 1.0.22 (Build 2021022700)
--CSS tweaks for responsive recorders on old browsers

Version 1.0.20 (Build 2021022100)
-Made recorders display better on small screen devices

Version 1.0.19 (Build 2021011600)
- better reporting of unregistered url in admin settings

Version 1.0.18 (Build 2020110400)
- fixed inability to turn off transcription
- added "safe save" setting

Version 1.0.17 (Build 2020090100)