@@ -126,37 +126,46 @@ class utils
     public static function get_lang_options()
     {
         return array(
-                constants::LANG_ENUS => get_string('en-us', constants::M_COMPONENT),
-                constants::LANG_ENAU => get_string('en-au', constants::M_COMPONENT),
-                constants::LANG_ENGB => get_string('en-gb', constants::M_COMPONENT),
-                constants::LANG_ENIE => get_string('en-ie', constants::M_COMPONENT),
-                constants::LANG_ENWL => get_string('en-wl', constants::M_COMPONENT),
-                constants::LANG_ENAB => get_string('en-ab', constants::M_COMPONENT),
-                constants::LANG_ENIN => get_string('en-in', constants::M_COMPONENT),
-                constants::LANG_ARAE => get_string('ar-ae', constants::M_COMPONENT),
-                constants::LANG_ARSA => get_string('ar-sa', constants::M_COMPONENT),
-                constants::LANG_ESES => get_string('es-es', constants::M_COMPONENT),
-                constants::LANG_ESUS => get_string('es-us', constants::M_COMPONENT),
-                constants::LANG_FRCA => get_string('fr-ca', constants::M_COMPONENT),
-                constants::LANG_FRFR => get_string('fr-fr', constants::M_COMPONENT),
-                constants::LANG_ITIT => get_string('it-it', constants::M_COMPONENT),
-                constants::LANG_PTPT => get_string('pt-pt', constants::M_COMPONENT),
-                constants::LANG_PTBR => get_string('pt-br', constants::M_COMPONENT),
-                constants::LANG_JAJP => get_string('ja-jp', constants::M_COMPONENT),
-                constants::LANG_KOKR => get_string('ko-kr', constants::M_COMPONENT),
-                constants::LANG_ZHCN => get_string('zh-cn', constants::M_COMPONENT),
-                constants::LANG_DEDE => get_string('de-de', constants::M_COMPONENT),
-                constants::LANG_DECH => get_string('de-ch', constants::M_COMPONENT),
-                constants::LANG_NLNL => get_string('nl-nl', constants::M_COMPONENT),
-                constants::LANG_HIIN => get_string('hi-in', constants::M_COMPONENT),
-                constants::LANG_TAIN => get_string('ta-in', constants::M_COMPONENT),
-                constants::LANG_TEIN => get_string('te-in', constants::M_COMPONENT),
-                constants::LANG_RURU => get_string('ru-ru', constants::M_COMPONENT),
-                constants::LANG_FAIR => get_string('fa-ir', constants::M_COMPONENT),
-                constants::LANG_HEIL => get_string('he-il', constants::M_COMPONENT),
-                constants::LANG_IDID => get_string('id-id', constants::M_COMPONENT),
-                constants::LANG_MSMY => get_string('ms-my', constants::M_COMPONENT),
-                constants::LANG_TRTR => get_string('tr-tr', constants::M_COMPONENT),
+            constants::LANG_ENUS => get_string('en-us', constants::M_COMPONENT),
+            constants::LANG_ENAU => get_string('en-au', constants::M_COMPONENT),
+            constants::LANG_ENGB => get_string('en-gb', constants::M_COMPONENT),
+            constants::LANG_ENIE => get_string('en-ie', constants::M_COMPONENT),
+            constants::LANG_ENWL => get_string('en-wl', constants::M_COMPONENT),
+            constants::LANG_ENAB => get_string('en-ab', constants::M_COMPONENT),
+            constants::LANG_ENIN => get_string('en-in', constants::M_COMPONENT),
+            constants::LANG_ARAE => get_string('ar-ae', constants::M_COMPONENT),
+            constants::LANG_ARSA => get_string('ar-sa', constants::M_COMPONENT),
+            constants::LANG_EUES => get_string('eu-es', constants::M_COMPONENT),
+            constants::LANG_ZHCN => get_string('zh-cn', constants::M_COMPONENT),
+            constants::LANG_FAIR => get_string('fa-ir', constants::M_COMPONENT),
+            constants::LANG_FIFI => get_string('fi-fi', constants::M_COMPONENT),
+            constants::LANG_FRCA => get_string('fr-ca', constants::M_COMPONENT),
+            constants::LANG_FRFR => get_string('fr-fr', constants::M_COMPONENT),
+            constants::LANG_DEDE => get_string('de-de', constants::M_COMPONENT),
+            constants::LANG_DECH => get_string('de-ch', constants::M_COMPONENT),
+            constants::LANG_NLNL => get_string('nl-nl', constants::M_COMPONENT),
+            constants::LANG_HEIL => get_string('he-il', constants::M_COMPONENT),
+            constants::LANG_HIIN => get_string('hi-in', constants::M_COMPONENT),
+            constants::LANG_HUHU => get_string('hu-hu', constants::M_COMPONENT),
+            constants::LANG_IDID => get_string('id-id', constants::M_COMPONENT),
+            constants::LANG_ITIT => get_string('it-it', constants::M_COMPONENT),
+            constants::LANG_JAJP => get_string('ja-jp', constants::M_COMPONENT),
+            constants::LANG_KOKR => get_string('ko-kr', constants::M_COMPONENT),
+            constants::LANG_MINZ => get_string('mi-nz', constants::M_COMPONENT),
+            constants::LANG_MSMY => get_string('ms-my', constants::M_COMPONENT),
+            constants::LANG_NONO => get_string('no-no', constants::M_COMPONENT),
+            constants::LANG_PLPL => get_string('pl-pl', constants::M_COMPONENT),
+            constants::LANG_PTPT => get_string('pt-pt', constants::M_COMPONENT),
+            constants::LANG_PTBR => get_string('pt-br', constants::M_COMPONENT),
+            constants::LANG_RORO => get_string('ro-ro', constants::M_COMPONENT),
+            constants::LANG_RURU => get_string('ru-ru', constants::M_COMPONENT),
+            constants::LANG_ESES => get_string('es-es', constants::M_COMPONENT),
+            constants::LANG_ESUS => get_string('es-us', constants::M_COMPONENT),
+            constants::LANG_SVSE => get_string('sv-se', constants::M_COMPONENT),
+            constants::LANG_TAIN => get_string('ta-in', constants::M_COMPONENT),
+            constants::LANG_TEIN => get_string('te-in', constants::M_COMPONENT),
+            constants::LANG_TRTR => get_string('tr-tr', constants::M_COMPONENT),
+            constants::LANG_UKUA => get_string('uk-ua', constants::M_COMPONENT),
         );
     }
 
